--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "pnpm with-env next build",
     "check": "next lint && tsc --noEmit",
-    "dev": "pnpm with-env next dev --turbo --port 3001",
+    "dev": "pnpm with-env next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "lint": "next lint",
