--- a/apps/panel/package.json
+++ b/apps/panel/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.60.0",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
+    "sms-length": "^0.2.2",
     "sonner": "^2.0.6",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.3.1",
